fix: types and imports for vercel

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://3b30-178-85-56-239.ngrok-free.app",
+  "url": "https://insight-markets-nnu5-git-main-1quiprodests-projects.vercel.app",
   "name": "Insight Markets",
-  "iconUrl": "https://ton.org/pics/ton_logo.sd.png"
+  "iconUrl": "https://insight-markets-nnu5-git-main-1quiprodests-projects.vercel.app/vite.svg"
 }
