fix: types and imports for vercel

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://insight-markets-nnu5-git-main-1quiprodests-projects.vercel.app",
+  "url": "https://insightmarkets.live/",
   "name": "Insight Markets",
-  "iconUrl": "https://insight-markets-nnu5-git-main-1quiprodests-projects.vercel.app/vite.svg"
+  "iconUrl": "https://insightmarkets.live/vite.svg"
 }
