--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/vite": "^4.1.18",
+    "@ton/core": "^0.63.0",
+    "@ton/crypto": "^3.3.0",
     "@tonconnect/ui-react": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
