--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://web.telegram.org; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.tonconnect.dev; img-src 'self' data: https:; style-src 'self' 'unsafe-inline';"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://web.telegram.org https://cdn.jsdelivr.net; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.tonconnect.dev https://bridge.tonapi.io wss://bridge.tonapi.io; img-src 'self' data: https: blob:; font-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;"
         }
       ]
     }
