fix: types and imports for vercel

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://insightmarkets.live/",
+  "url": "https://insightmarkets.live",
   "name": "Insight Markets",
   "iconUrl": "https://insightmarkets.live/vite.svg"
 }
